--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,9 +58,9 @@ a.nav-item:hover {
 }
 
 .project-figure {
-	margin: 0 auto 1rem auto;
-	max-height: 256px;
-	max-width: 400px;
+	margin: 0 auto 1rem auto;	
+	max-height: auto;
+	max-width: auto;
 }
 
 .project-text {
