change color code footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@ html, body{
 }
 
 a {
-  color: #00d1b2;
+  color: #000000;
 }
 
 a:hover {
@@ -30,7 +30,7 @@ section{
 }
 
 .section-4 {
-	background-color: #063647;
+	background-color: #FFFFFF;
 	padding: 0.2rem;
 }
 
