--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,11 +22,11 @@ section{
 }
 
 .section-2 {
-	background-color: #052D3D;
+	background-color: #063647;
 }
 
 .section-3 {
-	background-color: #0E282E;
+	background-color: #063647;
 }
 
 .section-4 {
